--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-html,body{width:100%;height:100%;background:#6d4254;overflow:hidden
-}html *,body *{position:absolute;top:0;right:0;bottom:0;left:0;margin:auto;box-sizing:border-box}
+html,body{width:100%;height:100%;background:#6d4242;overflow:hidden}html *,body *{position:absolute;top:0;right:0;bottom:0;left:0;margin:auto;box-sizing:border-box}
 html *:before,html *:after,body *:before,body *:after{content:"";position:absolute}
 .hair-1{width:20.9vmin;height:15vmin;background:#2e1414;top:-69vmin;left:0.5vmin;transform:rotate(-1.5deg);border-radius:50%}
 .hair-1::before{width:18vmin;height:8vmin;background:#2e1414;top:5vmin;left:-6.8vmin;transform:rotate(-56.8deg);border-radius:50%}
@@ -52,7 +51,7 @@ html *:before,html *:after,body *:before,body *:after{content:"";position:absolu
 .body-7{z-index:2;width:1vmin;height:11vmin;background:#6d4242;top:36.5vmin;left:18.6vmin;transform:rotate(0.5deg);border-radius:50%}
 .body-7::before{width:1vmin;height:11vmin;background:#2e1414;left:-18.65vmin;transform:rotate(-1deg);border-radius:50%}
 .body-8{width:20vmin;height:10vmin;background:#6d4242;top:55vmin;left:38.9vmin;transform:skewX(5deg);border-radius:0 0 0 92%}
-.body-8::before{width:10vmin;height:1vmin;background:#6d4242;top:8.9vmin;left:8vmin;transform:rotate(16.7deg)}
+.body-8::before{width:1vmin;height:1vmin;background:#6d4242;top:5vmin;left:10vmin;transform:rotate(16.7deg)}
 .body-9{width:13vmin;height:10vmin;background:#2e1414;top:52.5vmin;left:-31.6vmin;transform:skewX(-4deg);border-radius:0 0 90% 0}
 .body-9::before{width:4vmin;height:1vmin;background:#2e1414;top:9.1vmin;left:1vmin;transform:rotate(-16deg)}
 .body-10{z-index:2;width:100vmin;height:22vmin;background:#6d4242;top:98vmin;border-radius:50%}
@@ -76,9 +75,9 @@ html *:before,html *:after,body *:before,body *:after{content:"";position:absolu
 .eye-3::before{width:4vmin;height:5vmin;background:#fff;top:2.1vmin;left:3vmin;transform:rotate(-25deg)}
 .eye-4{z-index:3;width:3.6vmin;height:3.5vmin;background:#2e1414;top:-12.8vmin;left:15vmin;border-radius:50%;overflow:hidden}
 .eye-4::before{width:4vmin;height:2vmin;background:#a1abe0;top:0.6vmin;left:-0.2vmin;transform:rotate(-5deg);border-radius:50%}
-.eye-4::after{width:4vmin;height:4vmin;background:#a1abe0;top:1.5vmin}
+.eye-4::after{width:4vmin;height:4vmin;background:#a2a1e0;top:1.5vmin}
 .eye-5{z-index:3;width:2.55vmin;height:2.55vmin;background:#2e1414;top:-12.8vmin;left:15vmin;border-radius:50%;overflow:hidden}
-.eye-5::before{width:2.8vmin;height:2vmin;background:#453d55;top:1.2vmin;left:-0.15vmin;border-radius:50%}
+.eye-5::before{width:2.8vmin;height:2vmin;background:#3d3f55;top:1.2vmin;left:-0.15vmin;border-radius:50%}
 .eye-6{z-index:3;width:0.65vmin;height:0.65vmin;background:#fff;top:-12.9vmin;left:17.55vmin;border-radius:50%}
 .eye-left .eye-4{left:14.9vmin}
 .eye-left .eye-5{left:14.8vmin}
